JumpScript/tests/baselines/reference/errorForConflictingExportEqualsValue.errors.txt
tests/cases/compiler/errorForConflictingExportEqualsValue.jump(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/errorForConflictingExportEqualsValue.jump (1 errors) ====
    export var x;
    export = {};
    ~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    